Fixed center alignment issue

--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,5 @@
 body {
     margin-top: 3%;
-    margin-right: 3%;
     height: 100%;
     background-image: url(../img/background.jpg);
 }
@@ -9,7 +8,7 @@ tr {
 }
 #grid {
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 70px;
     display: table;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
